--- a/Trabajo_Final_CNN_Style_Transfer_SabrinaAntonelli.ipynb
+++ b/Trabajo_Final_CNN_Style_Transfer_SabrinaAntonelli.ipynb
@@ -609,10 +609,21 @@
     "\n",
     "Respuesta: con estos parametros total_variation_weight = 0.5 ,style_weight = 0.5 y content_weight = 10 la trasferencia de estilo es menor y aumenta el ruido en la imagen generada, la transicion es menos suavizada.\n",
     "\n",
+    "Resultado con parametros total_variation_weight = 0.1 ,style_weight = 10 y content_weight = 1\n",
+    "<img src=\"https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/blob/main/content/output/output_at_iteration_5.png\">\n",
+    "\n",
+    "Resultado con parametros total_variation_weight = 0.5 ,style_weight = 0.5 y content_weight = 10\n",
+    "<img src=\"https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/blob/main/content/output8/output_at_iteration_5.png\">\n",
+    "\n",
+    "\n",
+    "Imagenes:\n",
+    "https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/tree/main/content/output8\n",
+    "\n",
+    "\n",
     "\n",
     "# 9) Cambiar las imágenes de contenido y estilo por unas elegidas por usted. Adjuntar el resultado.\n",
     "\n",
-    "Respuesta:"
+    "Respuesta: https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/tree/main/content9/output9\n"
    ]
   },
   {
