--- a/Trabajo_Final_CNN_Style_Transfer_SabrinaAntonelli.ipynb
+++ b/Trabajo_Final_CNN_Style_Transfer_SabrinaAntonelli.ipynb
@@ -156,7 +156,7 @@
     "\n",
     "Respuesta: \n",
     "- np.expand_dims(img, axis=0) -> expande el array en 1 dimension para poder procesar en batch.\n",
-    "- vgg19.preprocess_input(img) -> Las imágenes se convierten de RGB a BGR, luego cada canal de color se centra en cero con respecto al conjunto de datos de ImageNet, sin escala."
+    "- vgg19.preprocess_input(img) -> Las imágenes se convierten de RGB a BGR, luego cada canal de color se centra en cero con respecto al conjunto de datos de ImageNet, sin escala. Los valores utilizados para centrar en 0 cada canal son [103.939, 116.779, 123.68] \n"
    ]
   },
   {
@@ -183,7 +183,8 @@
    "source": [
     "# 3) Habiendo comprendido lo que hace la celda anterior, explique de manera muy concisa qué hace la siguiente celda. ¿Qué relación tiene con la celda anterior?\n",
     "\n",
-    "Respuesta: se restaura la imagen a formato RGB"
+    "Respuesta: Se convierte la imagen al formato original BGR -> RGB. \n",
+    "Los mismos valores medios ([103.939, 116.779, 123.68]) utilizados en la funcion preprocess_input() se agregan a cada canal respectivo."
    ]
   },
   {
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 1,
    "metadata": {
     "id": "K1FODPATvJ1k"
    },
@@ -427,15 +428,7 @@
    },
    "outputs": [],
    "source": [
-    "#from tensorflow.python.framework.ops import disable_eager_execution\n",
-    "#disable_eager_execution()\n",
-    "\n",
-    "#import tensorflow as tf\n",
-    "#tf.compat.v1.disable_eager_execution()\n",
-    "\n",
     "grads = K.gradients(loss, combination_image)\n",
-    "#grads = tf.gradients(loss, combination_image)\n",
-    "\n",
     "outputs = [loss]\n",
     "if isinstance(grads, (list, tuple)):\n",
     "    outputs += grads\n",
@@ -610,10 +603,10 @@
     "Respuesta: con estos parametros total_variation_weight = 0.5 ,style_weight = 0.5 y content_weight = 10 la trasferencia de estilo es menor y aumenta el ruido en la imagen generada, la transicion es menos suavizada.\n",
     "\n",
     "Resultado con parametros total_variation_weight = 0.1 ,style_weight = 10 y content_weight = 1\n",
-    "<img src=\"https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/blob/main/content/output/output_at_iteration_5.png\">\n",
+    "<img src=\"https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/blob/main/content/output/output_at_iteration_8.png?raw=true\">\n",
     "\n",
     "Resultado con parametros total_variation_weight = 0.5 ,style_weight = 0.5 y content_weight = 10\n",
-    "<img src=\"https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/blob/main/content/output8/output_at_iteration_5.png\">\n",
+    "<img src=\"https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/blob/main/content/output8/output_at_iteration_8.png?raw=true\">\n",
     "\n",
     "\n",
     "Imagenes:\n",
@@ -623,7 +616,18 @@
     "\n",
     "# 9) Cambiar las imágenes de contenido y estilo por unas elegidas por usted. Adjuntar el resultado.\n",
     "\n",
-    "Respuesta: https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/tree/main/content9/output9\n"
+    "\n",
+    "Content image\n",
+    "<img src=\"https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/blob/main/content9/IMG_0304.jpeg?raw=true\">\n",
+    "\n",
+    "Style image\n",
+    "<img src=\"https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/blob/main/content9/style.jpeg?raw=true\">\n",
+    "\n",
+    "Generated image\n",
+    "<img src=\"https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/blob/main/content9/output9/output_at_iteration_9.png?raw=true\">\n",
+    "\n",
+    "\n",
+    "Imagenes: https://github.com/sabriantonelli/Trabajo_Final_StyleTransfer_SabrinaAntonelli/tree/main/content9/output9"
    ]
   },
   {
